# Wertheim

./: .gitignore  README.md  accounts_in_WERTHEIM0 (1).wtx  hinta.pas  titokrutin.pas  unit1.pas  versionsupport.pas  wertheim.7z  wertheim.lpi  wertheim.lpr
CPP_transcode/: CMakeLists.txt  README.md
CPP_transcode/include/: wertheim.hpp  wertheim_tarr_data.hpp
CPP_transcode/src/: main.cpp  tarr_data.cpp  wertheim.cpp
TS_transcode/: FACEBOOK.md  README.md  SOCIAL.ar.md  SOCIAL.de.md  SOCIAL.en.md  SOCIAL.fr.md  SOCIAL.ru.md  TECHNICAL_DOCS.ar.md  TECHNICAL_DOCS.de.md  TECHNICAL_DOCS.en.md  TECHNICAL_DOCS.fr.md  TECHNICAL_DOCS.md  TECHNICAL_DOCS.ru.md  USER_MANUAL.ar.md  USER_MANUAL.de.md  USER_MANUAL.en.md  USER_MANUAL.fr.md  USER_MANUAL.md  USER_MANUAL.ru.md  package-lock.json  package.json  tsconfig.json  wertheim.html
TS_transcode/src/: index.ts  tarr_data.ts  wertheim.ts
